force-app/main/default/objects/BLND_DFCS_Slide__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
    <fullName>BLND_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Conclusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>